--- a/ux/package.json
+++ b/ux/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "marked": "^1.1.1",
     "mavon-editor": "^2.9.0",
     "qs": "^6.9.2",
     "vue": "^2.5.2",
