--- a/ux/package.json
+++ b/ux/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-cookies": "^1.7.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
     "vuex": "^3.1.3"
